# WebThief

./: .env  .env.example  .env.jshook  .gitignore  ADVANCED_FEATURES.md  AI_CONTEXT.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART_ADVANCED.md  README.md  ROADMAP.md  TEST_RESULTS.md  VISUAL_INSPECTION_GUIDE.md  WebThief_Enhanced_PRD.md  convert_skills_v2.py  copy_skills_to_project.py  diagnose_nanfu.py  diagnose_response_cache.py  fix_skills.ps1  fix_skills.py  pyproject.toml  reconvert_skills.py  test_demo.py  test_steam_login.py  verify_nanfu_v4.py
.trae/documents/: 修复 response_cache 缓存 HTML 页面的问题.md  修复南孚官网克隆失败问题.md  测试南孚官网克隆.md  清理多余文件.md  配置 TRAE-Skills-150 全局技能.md
antigravity_clean/: index.html
docs/: animation_best_practices.md
examples/: test_advanced_features.py
nanfu_test_v13/: index.html
qq_official_test/: index.html
qq_output_v3/: index.html
steam_v2/: index.html
tests/: test_animation_features.py  test_login_detection.py  test_session_store.py  test_utils_crawl.py
webthief/: __init__.py  __main__.py  cli.py  config.py  downloader.py  orchestrator.py  parser.py  qr_interceptor.py  react_interceptor.py  renderer.py  sanitizer.py  scripts.py  session_store.py  site_crawler.py  spa_prerender.py  tech_analyzer.py  utils.py
webthief/api_simulator/: __init__.py  api_cache.py  api_simulator.py
webthief/core/: __init__.py  downloader.py  orchestrator.py  renderer.py  sanitizer.py  site_crawler.py  spa_prerender.py  storage.py
webthief/detector/: __init__.py  website_type_detector.py
webthief/extractor/: __init__.py  (+1 more)
(+413 files in other folders)
