[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webthief"
version = "4.2.0"
description = "高保真 1:1 网站克隆工具 — 完美还原 SPA 动态页面，支持离线运行"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "LING71671"}
]

dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tinycss2>=1.2.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
webthief = "webthief.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["webthief*"]
